--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div  id="7" class="game-box"></div>
                 <div  id="8" class="game-box"></div>
             </div>
-            <button>Reset</button>
+            <button id="reset-button">Reset</button>
         </section>
     </main>
 </body>
