Fixed small bug where user could star the game when a game was already ongoing. Added a game status display element. Added a settings section to the HTML. Added styles for the settings section. Added styles for error messages Added styles for input error state

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                         <div id="7" class="game-box"></div>
                         <div id="8" class="game-box"></div>
                     </div>
-                    <p id="status" id="status"></p>
+                    <p id="status" class="status"></p>
                 </div>
                 <div>
-                    <div class="row-div">
+                    <div class="settings-div">
                         <div class="row-div">
                             <label for="name-player1">Player 1 name</label>
                             <input
@@ -42,8 +42,10 @@
                                 class="player-name"
                             />
                         </div>
-                        <button id="start-button">Start</button>
-                        <button id="reset-button">Reset</button>
+                        <div class="row-div">
+                            <button id="start-button">Start</button>
+                            <button id="reset-button">Reset</button>
+                        </div>
                     </div>
                 </div>
             </section>
