Small fixes Added footer with libks to my page Added read.md file

--- a/index.html
+++ b/index.html
@@ -50,6 +50,20 @@
                 </div>
             </section>
         </main>
+        <footer class="footer">
+            <p>
+                Created by
+                <a href="https://github.com/yaoming16" target="_blank"
+                    >Pablo Perez</a
+                >
+            </p>
+            <p>
+                Learn more
+                <a href="https://yaoming16.github.io/" target="_blank"
+                    >about me</a
+                >
+            </p>
+        </footer>
     </body>
     <script src="./index.js"></script>
 </html>
